--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,25 +9,21 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Validating navigation Bar</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,104</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Validating title in the Page</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,236</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Validating User login</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,435</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">39,775</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Validating User login</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,471</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validating title in the Page</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,859</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Validating navigation Bar</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,295</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">75,625</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Validating navigation Bar &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.validateNavigationBar</td><td><a href="#m0">validateAppNavBar</a></td><td rowspan="1">1641797450063</td><td rowspan="1">120</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Validating title in the Page &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.validateTitle</td><td><a href="#m1">validateAppTitle</a></td><td rowspan="1">1641797451079</td><td rowspan="1">50</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Validating User login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.HomePage</td><td><a href="#m2">basePageNavigation</a></td><td rowspan="2">1641797452336</td><td rowspan="2">3402</td></tr><tr class="passedeven"><td><a href="#m3">basePageNavigation</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Validating User login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.HomePage</td><td><a href="#m0">basePageNavigation</a></td><td rowspan="2">1641800943039</td><td rowspan="2">6891</td></tr><tr class="passedeven"><td><a href="#m1">basePageNavigation</a></td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Validating title in the Page &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.validateTitle</td><td><a href="#m2">validateAppTitle</a></td><td rowspan="1">1641800966183</td><td rowspan="1">35</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Validating navigation Bar &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.validateNavigationBar</td><td><a href="#m3">validateAppNavBar</a></td><td rowspan="1">1641800985232</td><td rowspan="1">69</td></tr></tbody>
 </table>
-<h2>Validating navigation Bar</h2><h3 id="m0">testCases.validateNavigationBar#validateAppNavBar</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validating title in the Page</h2><h3 id="m1">testCases.validateTitle#validateAppTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [FEATURED CO123URSES] but found [FEATURED COURSES]
+<h2>Validating User login</h2><h3 id="m0">testCases.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>nonrestricteduser@qw.com</td><td>123456</td><td>Restrcited User</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>restricteduser@qw.com</td><td>456788</td><td>Non restricted user</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validating title in the Page</h2><h3 id="m2">testCases.validateTitle#validateAppTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [FEATURED CO123URSES] but found [FEATURED COURSES]
 	at testCases.validateTitle.validateAppTitle(validateTitle.java:43)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
-	at java.base/java.lang.Thread.run(Thread.java:834)
-... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validating User login</h2><h3 id="m2">testCases.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>restricteduser@qw.com</td><td>456788</td><td>Non restricted user</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testCases.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>nonrestricteduser@qw.com</td><td>123456</td><td>Restrcited User</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validating navigation Bar</h2><h3 id="m3">testCases.validateNavigationBar#validateAppNavBar</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
