--- a/test-output/index.html
+++ b/test-output/index.html
@@ -118,12 +118,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,11 +157,7 @@
                   <div class="stack-trace">java.lang.AssertionError: expected [FEATURED CO123URSES] but found [FEATURED COURSES]
 	at testCases.validateTitle.validateAppTitle(validateTitle.java:43)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
-	at java.base/java.lang.Thread.run(Thread.java:834)
-... Removed 24 stack frames
+... Removed 33 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -190,18 +186,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">
-                  </a> <!-- basePageNavigation(restricteduser@qw.com, 456788, Non restricted user) -->
-                  <span class="method-name">basePageNavigation</span>
-                  <span class="parameters">(restricteduser@qw.com, 456788, Non restricted user)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">
                   </a> <!-- basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User) -->
                   <span class="method-name">basePageNavigation</span>
                   <span class="parameters">(nonrestricteduser@qw.com, 123456, Restrcited User)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">
+                  </a> <!-- basePageNavigation(restricteduser@qw.com, 456788, Non restricted user) -->
+                  <span class="method-name">basePageNavigation</span>
+                  <span class="parameters">(restricteduser@qw.com, 456788, Non restricted user)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -215,21 +211,21 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;resources.Listeners&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Validating User login&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Validating User login&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testCases.HomePage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Validating User login --&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Validating title in the Page&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Validating title in the Page&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testCases.validateTitle&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Validating title in the Page --&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Validating navigation Bar&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Validating navigation Bar&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testCases.validateNavigationBar&quot;/&gt;
     &lt;/classes&gt;
@@ -281,24 +277,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'basePageNavigation')
 data.setCell(0, 2, 'testCases.HomePage')
-data.setCell(0, 3, 5937);
+data.setCell(0, 3, 6891);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'basePageNavigation')
 data.setCell(1, 2, 'testCases.HomePage')
-data.setCell(1, 3, 3402);
+data.setCell(1, 3, 3542);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'validateAppNavBar')
 data.setCell(2, 2, 'testCases.validateNavigationBar')
-data.setCell(2, 3, 120);
+data.setCell(2, 3, 69);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'validateAppTitle')
 data.setCell(3, 2, 'testCases.validateTitle')
-data.setCell(3, 3, 50);
+data.setCell(3, 3, 35);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -329,61 +325,49 @@ return data;
                 <span class="method-name">initialize</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.validateTitle</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">initialize</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.validateNavigationBar</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">initialize</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.HomePage</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</span>
-                <span class="method-start">7019 ms</span>
+                <span class="method-start">32904 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">testCases.validateNavigationBar</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">validateAppNavBar</span>
-                <span class="method-start">10685 ms</span>
+                <span class="method-name">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</span>
+                <span class="method-start">39826 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">10820 ms</span>
+                <span class="method-start">43372 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.validateTitle</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">44086 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">validateAppTitle</span>
-                <span class="method-start">11701 ms</span>
+                <span class="method-start">56048 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">12010 ms</span>
+                <span class="method-start">56870 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.HomePage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.validateNavigationBar</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">57217 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</span>
-                <span class="method-start">12958 ms</span>
+                <span class="method-name">validateAppNavBar</span>
+                <span class="method-start">75097 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16361 ms</span>
+                <span class="method-start">75167 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
